--- a/LLMS/Build-An-LLM/Building-Attention-Mechanisms.ipynb
+++ b/LLMS/Build-An-LLM/Building-Attention-Mechanisms.ipynb
@@ -283,6 +283,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Figure 3.10](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/final-step-attention.png)\n",
+    "\n",
+    "#### Figure 3.10 The final step, after calculating and normalizing the attention scores to obtain the attention weights for query x(2), is to compute the context vector z(2). This context vector is a combination of all input vectors x(1) to x(T ) weighted by the attention weights.\n",
+    "\n",
+    "##  Computing attention weights for all input tokens\n",
+    "\n",
+    "#### So far, we have computed attention weights and the context vector for input 2, as shown in the highlighted row in figure 3.11. Now let’s extend this computation to calculate attention weights and context vectors for all inputs.\n",
+    "\n",
+    "![Figure 3.11](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/all-attention-weights.png)\n",
+    "\n",
+    "#### Figure 3.11 The highlighted row shows the attention weights for the second input element as a query. Now we will generalize the computation to obtain all other attention weights. (Please note that the numbers in this figure are truncated to two digits after the decimal point to reduce visual clutter. The values in each row should add up to 1.0 or 100%.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.9995, 0.9544, 0.9422, 0.4753, 0.4576, 0.6310],\n",
+      "        [0.9544, 1.4950, 1.4754, 0.8434, 0.7070, 1.0865],\n",
+      "        [0.9422, 1.4754, 1.4570, 0.8296, 0.7154, 1.0605],\n",
+      "        [0.4753, 0.8434, 0.8296, 0.4937, 0.3474, 0.6565],\n",
+      "        [0.4576, 0.7070, 0.7154, 0.3474, 0.6654, 0.2935],\n",
+      "        [0.6310, 1.0865, 1.0605, 0.6565, 0.2935, 0.9450]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_scores = torch.empty(6, 6)\n",
+    "for i, x_i in enumerate(inputs):\n",
+    "    for j, x_j in enumerate(inputs):\n",
+    "        attn_scores[i, j] = torch.dot(x_i, x_j)\n",
+    "print(attn_scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Figure 3.12](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/3-12.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.9995, 0.9544, 0.9422, 0.4753, 0.4576, 0.6310],\n",
+      "        [0.9544, 1.4950, 1.4754, 0.8434, 0.7070, 1.0865],\n",
+      "        [0.9422, 1.4754, 1.4570, 0.8296, 0.7154, 1.0605],\n",
+      "        [0.4753, 0.8434, 0.8296, 0.4937, 0.3474, 0.6565],\n",
+      "        [0.4576, 0.7070, 0.7154, 0.3474, 0.6654, 0.2935],\n",
+      "        [0.6310, 1.0865, 1.0605, 0.6565, 0.2935, 0.9450]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_scores = inputs @ inputs.T\n",
+    "print(attn_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.2098, 0.2006, 0.1981, 0.1242, 0.1220, 0.1452],\n",
+      "        [0.1385, 0.2379, 0.2333, 0.1240, 0.1082, 0.1581],\n",
+      "        [0.1390, 0.2369, 0.2326, 0.1242, 0.1108, 0.1565],\n",
+      "        [0.1435, 0.2074, 0.2046, 0.1462, 0.1263, 0.1720],\n",
+      "        [0.1526, 0.1958, 0.1975, 0.1367, 0.1879, 0.1295],\n",
+      "        [0.1385, 0.2184, 0.2128, 0.1420, 0.0988, 0.1896]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_weights = torch.softmax(attn_scores, dim=-1)\n",
+    "print(attn_weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### In the context of using PyTorch, the dim parameter in functions like torch.softmax specifies the dimension of the input tensor along which the function will be computed. By setting dim=-1, we are instructing the softmax function to apply the normalization along the last dimension of the attn_scores tensor. If attn_scores is a two-dimensional tensor (for example, with a shape of [rows, columns]), it will normalize across the columns so that the values in each row (summing over the column dimension) sum up to 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 2 sum: 1.0\n",
+      "All row sums: tensor([1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "row_2_sum = sum([0.1385, 0.2379, 0.2333, 0.1240, 0.1082, 0.1581])\n",
+    "print(\"Row 2 sum:\", row_2_sum)\n",
+    "print(\"All row sums:\", attn_weights.sum(dim=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.4421, 0.5931, 0.5790],\n",
+      "        [0.4419, 0.6515, 0.5683],\n",
+      "        [0.4431, 0.6496, 0.5671],\n",
+      "        [0.4304, 0.6298, 0.5510],\n",
+      "        [0.4671, 0.5910, 0.5266],\n",
+      "        [0.4177, 0.6503, 0.5645]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_context_vecs = attn_weights @ inputs\n",
+    "print(all_context_vecs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Previous 2nd context vector: tensor([0.4419, 0.6515, 0.5683])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Previous 2nd context vector:\", context_vec_2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
