--- a/LLMS/Build-An-LLM/Building-Attention-Mechanisms.ipynb
+++ b/LLMS/Build-An-LLM/Building-Attention-Mechanisms.ipynb
@@ -446,6 +446,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  In the first step of the self-attention mechanism with trainable weight matrices, we compute query (q), key (k), and value (v) vectors for input elements x. Similar to previous sections, we designate the second input, x(2), as the query input. The query vector q(2) is obtained via matrix multiplication between the input x(2) and the weight matrix Wq. Similarly, we obtain the key and value vectors via matrix multiplication involving the weight matrices Wk and Wv."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_2 = inputs[1]     #1\n",
+    "d_in = inputs.shape[1]      #2\n",
+    "d_out = 2         #3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "W_query = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)\n",
+    "W_key   = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)\n",
+    "W_value = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.4306, 1.4551])\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_2 = x_2 @ W_query \n",
+    "key_2 = x_2 @ W_key \n",
+    "value_2 = x_2 @ W_value\n",
+    "print(query_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Weight parameters vs. attention weights\n",
+    "\n",
+    "#### In the weight matrices W, the term “weight” is short for “weight parameters,” the values of a neural network that are optimized during training. This is not to be confused with the attention weights. As we already saw, attention weights determine the extent to which a context vector depends on the different parts of the input (i.e., to what extent the network focuses on different parts of the input).\n",
+    "\n",
+    "#### In summary, weight parameters are the fundamental, learned coefficients that define the network’s connections, while attention weights are dynamic, context-specific values.\n",
+    "\n",
+    "#### Even though our temporary goal is only to compute the one context vector, z(2), we still require the key and value vectors for all input elements as they are involved in computing the attention weights with respect to the query q (2) (see figure 3.14)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "keys.shape: torch.Size([6, 2])\n",
+      "values.shape: torch.Size([6, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "keys = inputs @ W_key \n",
+    "values = inputs @ W_value\n",
+    "print(\"keys.shape:\", keys.shape)\n",
+    "print(\"values.shape:\", values.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The attention score computation is a dot-product computation similar to what we used in the simplified self-attention mechanism in section 3.3. The new aspect here is that we are not directly computing the dot-product between the input elements but using the query and key obtained by transforming the inputs via the respective weight matrices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1.8524)\n"
+     ]
+    }
+   ],
+   "source": [
+    "keys_2 = keys[1]             #1\n",
+    "attn_score_22 = query_2.dot(keys_2)\n",
+    "print(attn_score_22)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1.2705, 1.8524, 1.8111, 1.0795, 0.5577, 1.5440])\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_scores_2 = query_2 @ keys.T       #1\n",
+    "print(attn_scores_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.1500, 0.2264, 0.2199, 0.1311, 0.0906, 0.1820])\n"
+     ]
+    }
+   ],
+   "source": [
+    "d_k = keys.shape[-1]\n",
+    "attn_weights_2 = torch.softmax(attn_scores_2 / d_k**0.5, dim=-1)\n",
+    "print(attn_weights_2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
