--- a/LLMS/Build-An-LLM/Building-Attention-Mechanisms.ipynb
+++ b/LLMS/Build-An-LLM/Building-Attention-Mechanisms.ipynb
@@ -741,6 +741,231 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1921, 0.1646, 0.1652, 0.1550, 0.1721, 0.1510],\n",
+      "        [0.2041, 0.1659, 0.1662, 0.1496, 0.1665, 0.1477],\n",
+      "        [0.2036, 0.1659, 0.1662, 0.1498, 0.1664, 0.1480],\n",
+      "        [0.1869, 0.1667, 0.1668, 0.1571, 0.1661, 0.1564],\n",
+      "        [0.1830, 0.1669, 0.1670, 0.1588, 0.1658, 0.1585],\n",
+      "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
+      "       grad_fn=<SoftmaxBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "queries = sa_v2.W_query(inputs)     #1\n",
+    "keys = sa_v2.W_key(inputs) \n",
+    "attn_scores = queries @ keys.T\n",
+    "attn_weights = torch.softmax(attn_scores / keys.shape[-1]**0.5, dim=-1)\n",
+    "print(attn_weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### In causal attention, we mask out the attention weights above the diagonal such that for a given input, the LLM can’t access future tokens when computing the context vectors using the attention weights. For example, for the word “journey” in the second row, we only keep the attention weights for the words before (“Your”) and in the current position (“journey”)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 0., 0., 0., 0., 0.],\n",
+      "        [1., 1., 0., 0., 0., 0.],\n",
+      "        [1., 1., 1., 0., 0., 0.],\n",
+      "        [1., 1., 1., 1., 0., 0.],\n",
+      "        [1., 1., 1., 1., 1., 0.],\n",
+      "        [1., 1., 1., 1., 1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "context_length = attn_scores.shape[0]\n",
+    "mask_simple = torch.tril(torch.ones(context_length, context_length))\n",
+    "print(mask_simple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1921, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2041, 0.1659, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2036, 0.1659, 0.1662, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.1869, 0.1667, 0.1668, 0.1571, 0.0000, 0.0000],\n",
+      "        [0.1830, 0.1669, 0.1670, 0.1588, 0.1658, 0.0000],\n",
+      "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
+      "       grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "masked_simple = attn_weights*mask_simple\n",
+    "print(masked_simple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.5517, 0.4483, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.3800, 0.3097, 0.3103, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2758, 0.2460, 0.2462, 0.2319, 0.0000, 0.0000],\n",
+      "        [0.2175, 0.1983, 0.1984, 0.1888, 0.1971, 0.0000],\n",
+      "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
+      "       grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "row_sums = masked_simple.sum(dim=-1, keepdim=True)\n",
+    "masked_simple_norm = masked_simple / row_sums\n",
+    "print(masked_simple_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.2899,   -inf,   -inf,   -inf,   -inf,   -inf],\n",
+      "        [0.4656, 0.1723,   -inf,   -inf,   -inf,   -inf],\n",
+      "        [0.4594, 0.1703, 0.1731,   -inf,   -inf,   -inf],\n",
+      "        [0.2642, 0.1024, 0.1036, 0.0186,   -inf,   -inf],\n",
+      "        [0.2183, 0.0874, 0.0882, 0.0177, 0.0786,   -inf],\n",
+      "        [0.3408, 0.1270, 0.1290, 0.0198, 0.1290, 0.0078]],\n",
+      "       grad_fn=<MaskedFillBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mask = torch.triu(torch.ones(context_length, context_length), diagonal=1)\n",
+    "masked = attn_scores.masked_fill(mask.bool(), -torch.inf)\n",
+    "print(masked)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1921, 0.1646, 0.1652, 0.1550, 0.1721, 0.1510],\n",
+      "        [0.2041, 0.1659, 0.1662, 0.1496, 0.1665, 0.1477],\n",
+      "        [0.2036, 0.1659, 0.1662, 0.1498, 0.1664, 0.1480],\n",
+      "        [0.1869, 0.1667, 0.1668, 0.1571, 0.1661, 0.1564],\n",
+      "        [0.1830, 0.1669, 0.1670, 0.1588, 0.1658, 0.1585],\n",
+      "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
+      "       grad_fn=<SoftmaxBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ttn_weights = torch.softmax(masked / keys.shape[-1]**0.5, dim=1)\n",
+    "print(attn_weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Masking additional attention weights with dropout\n",
+    "\n",
+    "#### Dropout in deep learning is a technique where randomly selected hidden layer units are ignored during training, effectively “dropping” them out. This method helps prevent overfitting by ensuring that a model does not become overly reliant on any specific set of hidden layer units. It’s important to emphasize that dropout is only used during training and is disabled afterward.\n",
+    "\n",
+    "#### In the transformer architecture, including models like GPT, dropout in the attention mechanism is typically applied at two specific times: after calculating the attention weights or after applying the attention weights to the value vectors. \n",
+    "\n",
+    "#### In the following code example, we use a dropout rate of 50%, which means masking out half of the attention weights. (When we train the GPT model in later chapters, we will use a lower dropout rate, such as 0.1 or 0.2.) We apply PyTorch’s dropout implementation first to a 6 × 6 tensor consisting of 1s for simplicity:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[2., 2., 0., 2., 2., 0.],\n",
+      "        [0., 0., 0., 2., 0., 2.],\n",
+      "        [2., 2., 2., 2., 0., 2.],\n",
+      "        [0., 2., 2., 0., 0., 2.],\n",
+      "        [0., 2., 0., 2., 0., 2.],\n",
+      "        [0., 2., 2., 2., 2., 0.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "dropout = torch.nn.Dropout(0.5)    #1\n",
+    "example = torch.ones(6, 6)      #2\n",
+    "print(dropout(example))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### When applying dropout to an attention weight matrix with a rate of 50%, half of the elements in the matrix are randomly set to zero. To compensate for the reduction in active elements, the values of the remaining elements in the matrix are scaled up by a factor of 1/0.5 = 2. This scaling is crucial to maintain the overall balance of the attention weights, ensuring that the average influence of the attention mechanism remains consistent during both the training and inference phases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3843, 0.3293, 0.0000, 0.3100, 0.3442, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.2992, 0.0000, 0.2955],\n",
+      "        [0.4071, 0.3318, 0.3325, 0.2996, 0.0000, 0.2961],\n",
+      "        [0.0000, 0.3334, 0.3337, 0.0000, 0.0000, 0.3128],\n",
+      "        [0.0000, 0.3337, 0.0000, 0.3177, 0.0000, 0.3169],\n",
+      "        [0.0000, 0.3327, 0.3331, 0.3084, 0.3331, 0.0000]],\n",
+      "       grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "print(dropout(attn_weights))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
