added new book notes

--- a/LLMS/Build-An-LLM/Pretraining-GPT-model.ipynb
+++ b/LLMS/Build-An-LLM/Pretraining-GPT-model.ipynb
@@ -12,7 +12,11 @@
     "\n",
     "#### Perplexity measures how well the probability distribution predicted by the model matches the actual distribution of the words in the dataset. Similar to the loss, a lower perplexity indicates that the model predictions are closer to the actual distribution.\n",
     "\n",
-    "#### \n"
+    "#### When preparing the data loaders, we split the input text into training and validation set portions. Then we tokenize the text (only shown for the training set portion for simplicity) and divide the tokenized text into chunks of a user-specified length (here, 6). Finally, we shuffle the rows and organize the chunked text into batches (here, batch size 2), which we can use for model training.\n",
+    "\n",
+    "## Temperature scaling\n",
+    "\n",
+    "#### Let’s now look at temperature scaling, a technique that adds a probabilistic selection process to the next-token generation task. Previously, inside the generate_text_simple function, we always sampled the token with the highest probability as the next token using torch.argmax, also known as greedy decoding. To generate text with more variety, we can replace argmax with a function that samples from a probability distribution (here, the probability scores the LLM generates for each vocabulary entry at each token generation step)."
    ]
   }
  ],
