added new book notes

--- a/LLMS/Build-An-LLM/Fine-tuning.ipynb
+++ b/LLMS/Build-An-LLM/Fine-tuning.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# Fine-tuning for classification\n",
-    "\n"
+    "\n",
+    "## Different categories of fine-tuning\n",
+    "\n",
+    "#### The most common ways to fine-tune language models are instruction fine-tuning and classification fine-tuning. Instruction fine-tuning involves training a language model on a set of tasks using specific instructions to improve its ability to understand and execute tasks described in natural language prompts,"
    ]
   }
  ],
