--- a/LLMS/Build-An-LLM/Fine-tuning.ipynb
+++ b/LLMS/Build-An-LLM/Fine-tuning.ipynb
@@ -8,7 +8,21 @@
     "\n",
     "## Different categories of fine-tuning\n",
     "\n",
-    "#### The most common ways to fine-tune language models are instruction fine-tuning and classification fine-tuning. Instruction fine-tuning involves training a language model on a set of tasks using specific instructions to improve its ability to understand and execute tasks described in natural language prompts,"
+    "#### The most common ways to fine-tune language models are instruction fine-tuning and classification fine-tuning. Instruction fine-tuning involves training a language model on a set of tasks using specific instructions to improve its ability to understand and execute tasks described in natural language prompts\n",
+    "\n",
+    "#### In classification fine-tuning, a concept you might already be acquainted with if you have a background in machine learning, the model is trained to recognize a specific set of class labels, such as “spam” and “not spam.” Examples of classification tasks extend beyond LLMs and email filtering: they include identifying different species of plants from images; categorizing news articles into topics like sports, politics, and technology; and distinguishing between benign and malignant tumors in medical imaging.\n",
+    "\n",
+    "## Choosing the right approach\n",
+    "\n",
+    "#### Instruction fine-tuning improves a model’s ability to understand and generate responses based on specific user instructions. Instruction fine-tuning is best suited for models that need to handle a variety of tasks based on complex user instructions, improving flexibility and interaction quality. Classification fine-tuning is ideal for projects requiring precise categorization of data into predefined classes, such as sentiment analysis or spam detection.\n",
+    "\n",
+    "#### While instruction fine-tuning is more versatile, it demands larger datasets and greater computational resources to develop models proficient in various tasks. In contrast, classification fine-tuning requires less data and compute power, but its use is confined to the specific classes on which the model has been trained.\n",
+    "\n",
+    "- Classification fine-tuning involves replacing the output layer of an LLM via a small classification layer.\n",
+    "- In the case of classifying text messages as “spam” or “not spam,” the new classification layer consists of only two output nodes. Previously, we used the number of output nodes equal to the number of unique tokens in the vocabulary (i.e., 50,256).\n",
+    "- Instead of predicting the next token in the text as in pretraining, classification fine-tuning trains the model to output a correct class label—for example, “spam” or “not spam.”\n",
+    "- Before fine-tuning an LLM, we load the pretrained model as a base model.\n",
+    "- Fine-tuning a classification model uses the same cross entropy loss function as when pretraining the LLM."
    ]
   }
  ],
