--- a/LLMS/Building-LLM-Apps/Prompt-Engineering.ipynb
+++ b/LLMS/Building-LLM-Apps/Prompt-Engineering.ipynb
@@ -8,20 +8,67 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "#os.environ[\"HUGGINGFACEHUB_API_TOKEN\"]\n",
+    "openai_api_key = os.environ['OPENAI_API_KEY']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_message = \"\"\"\n",
+    "You are an AI assistant that helps human by generating tutorials given a text.\n",
+    "You will be provided with a text. If the text contains any kind of istructions on how to proceed with something, generate a tutorial in a bullet list.\n",
+    "Otherwise, inform the user that the text does not contain any instructions.\n",
+    "\n",
+    "Text: \n",
+    "\"\"\"\n",
+    "\n",
+    "instructions = \"\"\"\n",
+    "To prepare the known sauce from Genova, Italy, you can start by toasting the pine nuts to then coarsely \n",
+    "chop them in a kitchen mortar together with basil and garlic. Then, add half of the oil in the kitchen mortar and season with salt and pepper.\n",
+    "Finally, transfer the pesto to a bowl and stir in the grated Parmesan cheese.\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "machine-learning-env",
+   "display_name": "openAI",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.19"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
