added new variables

--- a/LLMS/Building-LLM-Apps/Prompt-Engineering.ipynb
+++ b/LLMS/Building-LLM-Apps/Prompt-Engineering.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
+    "import openai\n",
     "\n",
     "load_dotenv()\n",
     "\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +43,26 @@
     "Finally, transfer the pesto to a bowl and stir in the grated Parmesan cheese.\n",
     "\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# openai.api_base = \"https://api.openai.com/v1\"\n",
+    "\n",
+    "# response = openai.ChatCompletion.create(\n",
+    "#     model=\"gpt-3.5-turbo\", # engine = \"deployment_name\".\n",
+    "#     messages=[\n",
+    "#         {\"role\": \"system\", \"content\": system_message},\n",
+    "#         {\"role\": \"user\", \"content\": instructions},\n",
+    "#     ]\n",
+    "# )\n",
+    "\n",
+    "# #print(response)\n",
+    "# print(response['choices'][0]['message']['content'])"
    ]
   },
   {
