added new variables

--- a/LLMS/Building-LLM-Apps/Prompt-Engineering.ipynb
+++ b/LLMS/Building-LLM-Apps/Prompt-Engineering.ipynb
@@ -219,7 +219,56 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Recency Bias\n",
+    "\n",
+    "#### Recency bias is the tendency of LLMs to give more weight to the information that appears near the end of a prompt, and ignore or forget the information that appears earlier. This can lead to inaccurate or inconsistent responses that do not take into account the whole context of the task. For example, if the prompt is a long conversation between two people, the model may only focus on the last few messages and disregard the previous ones.\n",
+    "\n",
+    "#### One possible way to overcome recency bias is to break down the task into smaller steps or subtasks and provide feedback or guidance along the way. This can help the model focus on each step and avoid getting lost in irrelevant details. We’ve covered this technique in the Split complex tasks into subtasks section in, which we discussed splitting complex tasks into easier subtasks.\n",
+    "\n",
+    "#### Another way to overcome recency bias with prompt engineering techniques is to repeat the instructions or the main goal of the task at the end of the prompt. This can help remind the model of what it is supposed to do and what kind of response it should generate.\n",
+    "\n",
+    "#### As you can see, now the model was able to provide exactly the output we desired. This approach is particularly useful whenever we have a conversation history to keep storing in the context window. If this is the case, having the main instructions at the beginning might induce the model not to have them in mind once it also goes through the whole history, hence reducing their strength.\n",
+    "\n",
+    "## Use delimiters\n",
+    "\n",
+    "#### The last principle to be covered is related to the format we want to give to our metaprompt. This helps our LLM to better understand its intents as well as relate different sections and paragraphs to each other.\n",
+    "\n",
+    "#### To achieve this, we can use delimiters within our prompt. A delimiter can be any sequence of characters or symbols that is clearly mapping a schema rather than a concept. For example, we can consider the following sequences to be delimiters:\n",
+    "\n",
+    "- >>>>\n",
+    "- ====\n",
+    "- ------\n",
+    "- ####\n",
+    "- ` ` ` ` `\n",
+    "#### This leads to a series of benefits, including:\n",
+    "\n",
+    "- Clear separation: Delimiters mark distinct sections within a prompt, separating instructions, examples, and desired output.\n",
+    "- Guidance for LLMs: Proper use of delimiters removes ambiguity, guiding the model effectively.\n",
+    "- Enhanced precision: Delimiters improve prompt understanding, resulting in more relevant responses.\n",
+    "- Improved coherence: Effective use of delimiters organizes instructions, inputs, and outputs, leading to coherent responses.\n",
+    "\n",
+    "## Advanced techniques\n",
+    "\n",
+    "#### Advanced techniques might be implemented for specific scenarios and address the way the model reasons and thinks about the answer before providing it to the final user. Let’s look at some of these in the upcoming sections.\n",
+    "\n",
+    "## Few-shot approach\n",
+    "#### In their paper Language Models are Few-Shot Learners, Tom Brown et al. demonstrate that GPT-3 can achieve strong performance on many NLP tasks in a few-shot setting. This means that for all tasks, GPT-3 is applied without any fine-tuning, with tasks and few-shot demonstrations specified purely via text interaction with the model.\n",
+    "\n",
+    "#### This is an example and evidence of how the concept of few-shot learning – which means providing the model with examples of how we would like it to respond – is a powerful technique that enables model customization without interfering with the overall architecture.\n",
+    "\n",
+    "## Chain of thought\n",
+    "\n",
+    "#### Introduced in the paper Chain-of-Thought Prompting Elicits Reasoning in Large Language Models by Wei et al., chain of thought (CoT) is a technique that enables complex reasoning capabilities through intermediate reasoning steps. It also encourages the model to explain its reasoning, “forcing” it not to be too fast and risking giving the wrong response (as we saw in previous sections).\n",
+    "\n",
+    "## ReAct\n",
+    "\n",
+    "#### Introduced in the paper ReAct: Synergizing Reasoning and Acting in Language Models by Yao et al., ReAct (Reason and Act) is a general paradigm that combines reasoning and acting with LLMs. ReAct prompts the language model to generate verbal reasoning traces and actions for a task, and also receives observations from external sources such as web searches or databases. This allows the language model to perform dynamic reasoning and quickly adapt its action plan based on external information. For example, you can prompt the language model to answer a question by first reasoning about the question, then performing an action to send a query to the web, then receiving an observation from the search results, and then continuing with this thought, action, observation loop until it reaches a conclusion.\n",
+    "\n",
+    "#### The difference between CoT and ReAct approaches is that CoT prompts the language model to generate intermediate reasoning steps for a task, while ReAct prompts the language model to generate intermediate reasoning steps, actions, and observations for a task.\n",
+    "\n",
+    "#### Note that the “action” phase is generally related to the possibility for our LLM to interact with external tools, such as a web search."
+   ]
   }
  ],
  "metadata": {
