--- a/LLMS/Hands-On-Building-LLMS/Tokens-Embeddings.ipynb
+++ b/LLMS/Hands-On-Building-LLMS/Tokens-Embeddings.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,14 +72,39 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "song_id = 2172\n",
+    "\n",
+    "# Ask the model for songs similar to song #2172\n",
+    "model.wv.most_similar(positive=str(song_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def print_recommendations(song_id):\n",
+    "    similar_songs = np.array(\n",
+    "        model.wv.most_similar(positive=str(song_id),topn=5)\n",
+    "    )[:,0]\n",
+    "    return  songs_df.iloc[similar_songs]\n",
+    "\n",
+    "# Extract recommendations\n",
+    "print_recommendations(2172)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "openAI",
+   "display_name": "openAI-2",
    "language": "python",
    "name": "python3"
   },
