fixed dependency issues

--- a/LLMS/Hands-On-Building-LLMS/Tokens-Embeddings.ipynb
+++ b/LLMS/Hands-On-Building-LLMS/Tokens-Embeddings.ipynb
@@ -8,6 +8,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How Does the Tokenizer Break Down Text?\n",
+    "\n",
+    "#### There are three major factors that dictate how a tokenizer breaks down an input prompt.\n",
+    "\n",
+    "#### First, at model design time, the creator of the model chooses a tokenization method. Popular methods include byte pair encoding (BPE) (widely used by GPT models) and WordPiece (used by BERT). These methods are similar in that they aim to optimize an efficient set of tokens to represent a text dataset, but they arrive at it in different ways.\n",
+    "\n",
+    "#### Second, after choosing the method, we need to make a number of tokenizer design choices like vocabulary size and what special tokens to use. More on this in “Comparing Trained LLM Tokenizers”.\n",
+    "\n",
+    "#### Third, the tokenizer needs to be trained on a specific dataset to establish the best vocabulary it can use to represent that dataset. Even if we set the same methods and parameters, a tokenizer trained on an English text dataset will be different from another trained on a code dataset or a multilingual text dataset.\n",
+    "\n",
+    "## Word Versus Subword Versus Character Versus Byte Tokens\n",
+    "\n",
+    "#### The tokenization scheme we just discussed is called subword tokenization. It’s the most commonly used tokenization scheme but not the only one. The four notable ways to tokenize are shown in Figure 2-6. Let’s go over them:\n",
+    "\n",
+    "### Word tokens\n",
+    "#### This approach was common with earlier methods like word2vec but is being used less and less in NLP. Its usefulness, however, led it to be used outside of NLP for use cases such as recommendation systems, as we’ll see later in the chapter.\n",
+    "\n",
+    "#### One challenge with word tokenization is that the tokenizer may be unable to deal with new words that enter the dataset after the tokenizer was trained. This also results in a vocabulary that has a lot of tokens with minimal differences between them (e.g., apology, apologize, apologetic, apologist). This latter challenge is resolved by subword tokenization as it has a token for apolog, and then suffix tokens (e.g., -y, -ize, -etic, -ist) that are common with many other tokens, resulting in a more expressive vocabulary.\n",
+    "\n",
+    "### Subword tokens\n",
+    "#### This method contains full and partial words. In addition to the vocabulary expressivity mentioned earlier, another benefit of the approach is its ability to represent new words by breaking down the new token into smaller characters, which tend to be a part of the vocabulary.\n",
+    "\n",
+    "### Character tokens\n",
+    "#### This is another method that can deal successfully with new words because it has the raw letters to fall back on. While that makes the representation easier to tokenize, it makes the modeling more difficult. Where a model with subword tokenization can represent “play” as one token, a model using character-level tokens needs to model the information to spell out “p-l-a-y” in addition to modeling the rest of the sequence.\n",
+    "\n",
+    "#### Subword tokens present an advantage over character tokens in the ability to fit more text within the limited context length of a Transformer model. So with a model with a context length of 1,024, you may be able to fit about three times as much text using subword tokenization than using character tokens (subword tokens often average three characters per token).\n",
+    "\n",
+    "#### Both BERT tokenizers wrap the input within a starting [CLS] token and a closing [SEP] token. [CLS] and [SEP] are utility tokens used to wrap the input text and they serve their own purposes. [CLS] stands for classification as it’s a token used at times for sentence classification. [SEP] stands for separator, as it’s used to separate sentences in some applications that require passing two sentences to a model (For example, in Chapter 8, we will use a [SEP] token to separate the text of the query and a candidate result.)\n",
+    "\n",
+    "\n",
+    "## Token Embeddings\n",
+    "#### Now that we understand tokenization, we have solved one part of the problem of representing language to a language model. In this sense, language is a sequence of tokens. And if we train a good-enough model on a large-enough set of tokens, it starts to capture the complex patterns that appear in its training dataset:\n",
+    "\n",
+    "#### If the training data contains a lot of English text, that pattern reveals itself as a model capable of representing and generating the English language.\n",
+    "\n",
+    "#### If the training data contains factual information (Wikipedia, for example), the model would have the ability to generate some factual information (see the following note).\n",
+    "\n",
+    "## Creating Contextualized Word Embeddings with Language Models\n",
+    "#### Now that we’ve covered token embeddings as the input to a language model, let’s look at how language models can create better token embeddings. This is one of the primary ways to use language models for text representation. This empowers applications like named-entity recognition or extractive text summarization (which summarizes a long text by highlighting the most important parts of it, instead of generating new text as a summary).\n",
+    "\n",
+    "#### Instead of representing each token or word with a static vector, language models create contextualized word embeddings (shown in Figure 2-8) that represent a word with a different token based on its context. These vectors can then be used by other systems for a variety of tasks. In addition to the text applications we mentioned in the previous paragraph, these contextualized vectors, for example, are what powers AI image generation systems like DALL·E, Midjourney, and Stable Diffusion, for example.\n",
+    "\n",
+    "#### It turns out that we don’t have to be too scientific in how we choose the negative examples. A lot of useful models result from the simple ability to detect positive examples from randomly generated examples (inspired by an important idea called noise-contrastive estimation and described in “Noise-contrastive estimation: A new estimation principle for unnormalized statistical models”). So in this case, we get random words and add them to the dataset and indicate that they are not neighbors (and thus the model should output 0 when it sees them).\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -59,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +123,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('3167', 0.9982099533081055),\n",
+       " ('2849', 0.9973843693733215),\n",
+       " ('5586', 0.9963225722312927),\n",
+       " ('10105', 0.9960461258888245),\n",
+       " ('3116', 0.9957844614982605),\n",
+       " ('5634', 0.9952591061592102),\n",
+       " ('3126', 0.9952290058135986),\n",
+       " ('6624', 0.9950157403945923),\n",
+       " ('6641', 0.9942757487297058),\n",
+       " ('10084', 0.9941844344139099)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "song_id = 2172\n",
     "\n",
@@ -85,9 +155,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>artist</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3167</th>\n",
+       "      <td>Unchained</td>\n",
+       "      <td>Van Halen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2849</th>\n",
+       "      <td>Run To The Hills</td>\n",
+       "      <td>Iron Maiden</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5586</th>\n",
+       "      <td>The Last In Line</td>\n",
+       "      <td>Dio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10105</th>\n",
+       "      <td>Three Lock Box</td>\n",
+       "      <td>Sammy Hagar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3116</th>\n",
+       "      <td>Communication Breakdown</td>\n",
+       "      <td>Led Zeppelin</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          title        artist\n",
+       "id                                           \n",
+       "3167                  Unchained     Van Halen\n",
+       "2849           Run To The Hills   Iron Maiden\n",
+       "5586           The Last In Line           Dio\n",
+       "10105            Three Lock Box   Sammy Hagar\n",
+       "3116    Communication Breakdown  Led Zeppelin"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
